--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 .gradle
-**/build/
-.idea/
-build.gradle
-gradlew.bat
-gradlew
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
